implemented joined inheritence of user - trainee/trainer