@@ -21,9 +21,6 @@ public class TraineesRepositoryTests {
     private TraineesRepository traineesRepository;
 
     @Autowired
-    private UsersRepository usersRepository;
-
-    @Autowired
     private TrainersRepository trainersRepository;
 
     @Autowired
@@ -36,43 +33,33 @@ public class TraineesRepositoryTests {
     @Test
     public void addTraineeAndRetrieveItFromRepository() {
 
-        User user = new User("Gigi", "Mirziashvili", "Gigi.Mirziashvili",
-                "password", true);
-        Trainee trainee = new Trainee(user, "Tbilisi", LocalDate.of(2022, 2, 2));
+        Trainee trainee = new Trainee("Gigi", "Mirziashvili", "Gigi.Mirziashvili",
+                "password", true, "Tbilisi", LocalDate.of(2022, 2, 2));
 
-        usersRepository.save(trainee.getUser());
         Trainee savedTrainee = traineesRepository.save(trainee);
 
         assertNotNull(savedTrainee);
-        assertEquals(trainee.getTraineeId(), savedTrainee.getTraineeId());
+        assertEquals(trainee.getUserId(), savedTrainee.getUserId());
     }
 
     @Test
     public void findTraineeByUsername() {
 
-        User user = new User("Gigi", "Mirziashvili", "Gigi.Mirziashvili",
-                "password", true);
-        Trainee trainee = new Trainee(user, "Tbilisi", LocalDate.of(2022, 2, 2));
-
-        usersRepository.save(trainee.getUser());
+        Trainee trainee = new Trainee("Gigi", "Mirziashvili", "Gigi.Mirziashvili",
+                "password", true, "Tbilisi", LocalDate.of(2022, 2, 2));
         Trainee savedTrainee = traineesRepository.save(trainee);
 
-        assertEquals(traineesRepository.findByUserUsername("Gigi.Mirziashvili").orElse(new Trainee()), savedTrainee);
+        assertEquals(traineesRepository.findByUsername("Gigi.Mirziashvili").orElse(new Trainee()), savedTrainee);
     }
 
     @Test
     public void findTraineeTrainingsWithContext() {
 
-        User traineeUser = new User("TraineeFirst", "TraineeLast", "trainee_username", "password", true);
-        User trainerUser = new User("TrainerFirst", "TrainerLast", "trainer_username", "password", true);
-
-        usersRepository.save(traineeUser);
-        usersRepository.save(trainerUser);
-
         TrainingType trainingType = trainingTypeRepository.getTrainingTypeByTrainingTypeName(TrainingTypeEnum.BOXING);
 
-        Trainee trainee = new Trainee(traineeUser, "TraineeAddress", LocalDate.of(2002, 7, 18));
-        Trainer trainer = new Trainer(trainerUser, trainingType);
+        Trainee trainee = new Trainee("TraineeFirst", "TraineeLast", "trainee_username",
+                "password", true, "TraineeAddress", LocalDate.of(2002, 7, 18));
+        Trainer trainer = new Trainer("TrainerFirst", "TrainerLast", "trainer_username", "password", true, trainingType);
 
         traineesRepository.save(trainee);
         trainersRepository.save(trainer);
@@ -81,12 +68,12 @@ public class TraineesRepositoryTests {
                 LocalDate.of(2024, 1, 10), Duration.ofHours(1));
         trainingsRepository.save(training);
 
-        List<Training> trainingList = traineesRepository.findTraineeTrainings(trainee.getUser().getUsername(),
+        List<Training> trainingList = traineesRepository.findTraineeTrainings(trainee.getUsername(),
                 LocalDate.of(2024, 1, 1), LocalDate.of(2024, 1, 15),
                 "trainer_username", trainingType);
 
         assertEquals(trainingList.size(), 1);
-        assertEquals(trainingList.get(0), training);
+        assertEquals(trainingList.getFirst(), training);
     }
 
 }
